Corrected white space

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-*{
+html,body{
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 body
@@ -119,13 +121,13 @@ a.dropdown-item
 {
     font-family: 'BioRhyme', serif;
     color: darkgreen;
-    font-size: 3rem;
+    font-size: 3vw;
     font-weight: 600;
 }
 
 .major-content p
 {
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     font-weight: 500;
     
 }
@@ -137,7 +139,7 @@ a.dropdown-item
 
 .value-content ul li
 {
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     font-weight: 500;
 }
 
@@ -179,7 +181,7 @@ a.dropdown-item
 .main-miss
 {
     font-family: 'Cutive', serif;
-    font-size: 1.8rem;
+    font-size: 1.8vw;
     text-align: center;
     font-weight: 600;
 
